--- a/ILIve/app/build.gradle
+++ b/ILIve/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 //    id 'com.didi.dokit'
 }
 
+
 android {
     compileSdk 31
 
@@ -81,6 +82,8 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //dokit
 //    debugImplementation "io.github.didi.dokit:dokitx:3.5.0"
