--- a/ILIve/app/build.gradle
+++ b/ILIve/app/build.gradle
@@ -10,7 +10,8 @@ android {
 
     defaultConfig {
         applicationId "com.hhsj.ilive"
-        minSdk 19
+//        minSdk 19
+        minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -82,6 +83,8 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
