--- a/ILIve/app/src/main/AndroidManifest.xml
+++ b/ILIve/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
         android:theme="@style/Theme.ILive">
+        <activity
+            android:name=".BusinessCardActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.main.my.UserInfoActivity"
             android:exported="false" />
@@ -32,10 +35,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
-
-        </activity>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AccountSecurityActivity"
             android:exported="true"
