--- a/ILIve/app/src/main/AndroidManifest.xml
+++ b/ILIve/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         <activity
             android:name=".ui.main.my.UserInfoActivity"
             android:exported="false" />
+<!--        LoginActivity -->
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
@@ -38,10 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+<!--        <activity-->
+<!--            android:name=".ui.main.MainActivity"-->
+<!--            android:exported="true"-->
+<!--            android:screenOrientation="portrait" />-->
         <activity
             android:name=".AccountSecurityActivity"
             android:exported="true"
