--- a/ILIve/app/build.gradle
+++ b/ILIve/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.2"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
+    //zxing
+    implementation 'com.google.zxing:core:3.3.0'
+
     //moshi
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
