--- a/ILIve/app/src/main/AndroidManifest.xml
+++ b/ILIve/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:exported="false" />
 <!--        LoginActivity -->
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
@@ -39,10 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity-->
-<!--            android:name=".ui.main.MainActivity"-->
-<!--            android:exported="true"-->
-<!--            android:screenOrientation="portrait" />-->
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AccountSecurityActivity"
             android:exported="true"
