--- a/ILIve/app/src/main/AndroidManifest.xml
+++ b/ILIve/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ILive">
         <activity
+            android:name=".ui.main.avatar.UpdateAvatarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.authentication.IdentityAuthenticationActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.main.my.UserQrCodeCardActivity"
             android:exported="false" />
         <activity
@@ -26,8 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.main.my.UserInfoActivity"
-            android:exported="false" />
-<!--        LoginActivity -->
+            android:exported="false" /> <!-- LoginActivity -->
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
