--- a/ILIve/app/build.gradle
+++ b/ILIve/app/build.gradle
@@ -74,8 +74,9 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
 
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.google.code.gson:gson:2.8.2"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     //zxing
